css + html in markets show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,6 @@
 @import "worktime_broadcastings";
 @import "volsofdays.scss";
 .login-form { max-width: 380px; margin-top: 10px }
+#wrap {
+  margin-top: 80px;
+}
