--- a/app/views/volsofdays/_volsofday.html.slim
+++ b/app/views/volsofdays/_volsofday.html.slim
@@ -2,4 +2,4 @@
   tr
     td = volsofday.time
     td = volsofday.value
-    td = link_to 'Destroy Volsofday', [volsofday.market, volsofday], method: :delete, data: { confirm: 'Are you sure?' }
+    td = link_to 'Destroy', [volsofday.market, volsofday], method: :delete, data: { confirm: 'Are you sure?' }
