--- a/app/views/worktime_broadcastings/_worktime_broadcasting.html.slim
+++ b/app/views/worktime_broadcastings/_worktime_broadcasting.html.slim
@@ -3,4 +3,4 @@
     td = worktime_broadcasting.wday
     td = worktime_broadcasting.start
     td = worktime_broadcasting.stop
-    td = link_to 'Destroy Worktime_broadcasting', [worktime_broadcasting.market, worktime_broadcasting], method: :delete, data: { confirm: 'Are you sure?' }
+    td = link_to 'Destroy', [worktime_broadcasting.market, worktime_broadcasting], method: :delete, data: { confirm: 'Are you sure?' }
