--- a/app/assets/stylesheets/volsofdays.scss
+++ b/app/assets/stylesheets/volsofdays.scss
@@ -1,27 +1,57 @@
 // Place all the styles related to the volsofdays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#am-hours {
+
+#volsofdays {
   float: left;
-  width: 30px;
+  width: 50%;
+
+  #volsofdays-new {
+    float: left;
+    width: 70%;
+
+    #timestring {
+      float: left;
+      width: 100%;
+
+      #hours {
+        float: left;
+        width: 33%;
+        #am-hours {
+          float: left;
+          width: 50%;
+        }
+        #pm-hours {
+          float: left;
+          width: 50%;
+        }
+      }
+      #new_volsofday {
+        float: left;
+        width: 33%;
+      }
+      #minutes {
+        padding-left: 1%;
+        float: left;
+        width: 33%;
+      }
+    }
+  }
+
+  #volsofdays-list {
+    float: left;
+    width: 20%;
+  }
+
 }
 
-#pm-hours {
-  float: left;
-  width: 50px;
+#volsofday_value {
+  float: right;
+  width: 50%;
 }
 
-#hours {
-  float: left;
-  width: 100px;
+#volsofday_time {
+  float: right;
+  width: 50%;
 }
 
-#minutes {
-  width: 50px;
-  float: left;
-}
-
-#timestring {
-  float: left;
-  width: 150px;
-}
