--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -3,8 +3,9 @@ h1 Listing devices
 table class="table table-striped table-hover table-condensed"
   thead
     tr
-      th Market
+      th ID
       th Name
+      th Market
       th Ping
       th Version
       th Updated
@@ -29,8 +30,9 @@ table class="table table-striped table-hover table-condensed"
   tbody
     - @devices.each do |device|
       tr
-        td = device.market.name
+        td = device.id
         td = device.name
+        td = device.market.name
         td = device.ping
         td = device.version
         td class=('danger' if (Time.now.utc - device.updated_at > device.ping * 2))
