--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,13 @@
 <body>
 <%= render 'layouts/application_nav' %>
 
-<div class="container-fluid">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+<div id="wrap">
+  <div class="container-fluid">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
-  <%= yield %>
+    <%= yield %>
+  </div>
 </div>
 </body>
 </html>
