--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -1,5 +1,9 @@
 p#notice = notice
 
+= link_to 'Edit', edit_market_path(@market)
+'|
+= link_to 'Back', markets_path
+
 p
   strong Name:
   = @market.name
@@ -14,37 +18,41 @@ p
         ul
           - volsofday.errors.full_messages.each do |message|
             li = message
+#market-show
+  #volsofdays
+    #volsofdays-new
+      h2 Create new time/value of volsofday
+      = render 'volsofdays/form'
 
-h2 Create new time/value of volsofday
-= render 'volsofdays/form'
+    #volsofdays-list
+      h2 Volsofdays
+      - if @market.volsofdays.count > 0
+        table class="table table-striped table-hover table-condensed"
+          thead
+            tr
+              th Time
+              th Value
+              th [colspan="1"]
+          tbody
+            = render @market.volsofdays.order(:time)
 
-h2 Volsofdays
-- if @market.volsofdays.count > 0
-  table class="table table-striped table-hover table-condensed"
-    thead
-      tr
-        th Time
-        th Value
-        th [colspan="1"]
-    tbody
-      = render @market.volsofdays.order(:time)
+  #worktime
+    #worktime-new
+      h2 Create work's time/wday of
+      = render 'worktime_broadcastings/form'
 
-h2 Create work's time/wday of
-= render 'worktime_broadcastings/form'
+    #worktime-broadcastings
+      h2 Worktime_broadcastings
+      - if @market.worktime_broadcastings.count > 0
+        #worktime-show
+          table class="table table-striped table-hover table-condensed"
+            thead
+              tr
+                th Day
+                th Start
+                th Stop
+                th [colspan="1"]
+            tbody
+              = render @market.worktime_broadcastings.order(:wday)
 
-h2 Worktime_broadcastings
-- if @market.worktime_broadcastings.count > 0
-  #work-time-show
-    table class="table table-striped table-hover table-condensed"
-      thead
-        tr
-          th WDay
-          th Start worktime
-          th Stop worktime
-          th [colspan="1"]
-      tbody
-        = render @market.worktime_broadcastings.order(:wday)
 
-= link_to 'Edit', edit_market_path(@market)
-'|
-= link_to 'Back', markets_path
