--- a/app/views/volsofdays/_form.html.slim
+++ b/app/views/volsofdays/_form.html.slim
@@ -1,21 +1,39 @@
 #timestring
   #hours
     #am-hours
-      - (0..11).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours'
+      table.table-bordered
+        tbody
+          - h = 0
+          - (1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote: true, class: 'set-hours'
+                - h+=1
     #pm-hours
-      - (12..23).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours'
+      table.table-bordered
+        tbody
+          - h = 12
+          - (1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote: true, class: 'set-hours'
+                - h+=1
+
+  = form_for [@market, @market.volsofdays.build] do |f|
+    .field
+      = f.label :time
+      = f.text_field :time, value:'00:00', :readonly => true
+    .field
+      = f.label :value
+      = f.number_field :value, value: 60
+    .actions = f.submit
+
   #minutes
-    - (0..55).step(5).each do |m|
-      li = link_to m.to_s, '#', :class => 'set-minutes'
-
-= form_for [@market, @market.volsofdays.build] do |f|
-
-  .field
-    = f.label :time
-    = f.text_field :time, value:'00:00', :readonly => true
-  .field
-    = f.label :value
-    = f.number_field :value, value: 60
-  .actions = f.submit
+    table.table-bordered
+      tbody
+        - m = 0
+        - (1..3).each do |tr|
+          tr
+            - (1..4).each do |td|
+              td = link_to m.to_s, "#", remote: true, class: 'set-minutes'
+              - m+=5
