--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -7,4 +7,4 @@
           = form_for([volume.device, volume]) do |f|
             = f.number_field :value, min: 0, max:100
             = f.submit
-        td = link_to 'Destroy Volsofday', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }
+        td = link_to 'Destroy', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }
