--- a/app/views/worktime_broadcastings/_form.html.slim
+++ b/app/views/worktime_broadcastings/_form.html.slim
@@ -1,15 +1,32 @@
 #timestring-start
   #hours-start
     #am-hours-start
-      - (0..11).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours-start'
+      table.table-bordered
+        tbody
+          - h = 0
+          - (1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote: true, class: 'set-hours-start'
+                - h+=1
     #pm-hours-start
-      - (12..23).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours-start'
+      table.table-bordered
+        tbody
+          - h = 12
+          - (1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote: true, class: 'set-hours-start'
+                - h+=1
   #minutes-start
-    - (0..55).step(5).each do |m|
-      li = link_to m.to_s, '#', :class => 'set-minutes-start'
-
+    table.table-bordered
+      tbody
+        - m = 0
+        - (1..3).each do |tr|
+          tr
+            - (1..4).each do |td|
+              td = link_to m.to_s, "#", remote: true, class: 'set-minutes-start'
+              - m+=5
 
 #work-time-form
   = form_for [@market, @market.worktime_broadcastings.build] do |f|
@@ -28,11 +45,29 @@
 #timestring-stop
   #hours-stop
     #am-hours-stop
-      - (0..11).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours-stop'
+      table.table-bordered
+        tbody
+          - h = 0
+          -(1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote:true, class: 'set-hours-stop'
+                - h+=1
     #pm-hours-stop
-      - (12..23).each do |h|
-        li = link_to h.to_s, "#", :class => 'set-hours-stop'
+      table.table-bordered
+        tbody
+          - h = 12
+          -(1..3).each do |tr|
+            tr
+              - (1..4).each do |td|
+                td = link_to h.to_s, "#", remote:true, class: 'set-hours-stop'
+                - h+=1
   #minutes-stop
-    - (0..55).step(5).each do |m|
-      li = link_to m.to_s, '#', :class => 'set-minutes-stop'
+    table.table-bordered
+      tbody
+        - m = 0
+        - (1..3).each do |tr|
+          tr
+            - (1..4).each do |td|
+              td = link_to m.to_s, "#", remote: true, class: 'set-minutes-stop'
+              - m+=5
