added js + css bootstrap-timepicker

--- a/app/assets/stylesheets/worktime_broadcastings.scss
+++ b/app/assets/stylesheets/worktime_broadcastings.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the worktime_broadcastings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+/*
 #worktime {
   float: left;
   width: 50%;
@@ -9,8 +9,7 @@
     float: left;
     width: 100%;
     #timestring-start {
-      float: left;
-      width: 25%;
+
       #hours-start {
         float: left;
         width: 50%;
@@ -76,4 +75,4 @@
 #new_worktime_broadcasting {
   float: left;
   width: 100%;
-}
+}*/
