--- a/app/assets/stylesheets/volsofdays.scss
+++ b/app/assets/stylesheets/volsofdays.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the volsofdays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+/*
 #volsofdays {
   float: left;
   width: 50%;
@@ -53,5 +53,4 @@
 #volsofday_time {
   float: right;
   width: 50%;
-}
-
+}*/
