--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -28,7 +28,7 @@ p
     #volsofdays-list class="col-md-2"
       h2 Volsofdays
       - if @market.volsofdays.count > 0
-        table class="table table-striped table-hover table-condensed"
+        ttable.table.table-striped.table-hover.table-condensed.table-bordered
           thead
             tr
               th Time
