--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -1,21 +1,23 @@
-= form_for @task do |f|
-  - if @task.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@task.errors.count, "error")} prohibited this task from being saved:"
-      ul
-        - @task.errors.full_messages.each do |message|
-          li = message
+.col-md-12
+  = form_for @task do |f|
+    - if @task.errors.any?
+      #error_explanation
+        h2 = "#{pluralize(@task.errors.count, "error")} prohibited this task from being saved:"
+        ul
+          - @task.errors.full_messages.each do |message|
+            li = message
 
-  .field
-    = f.label :device
-    = f.collection_select :device_id, Device.order(:name), :id, :name
-  .field
-    = f.label :typeoftask
-    = f.collection_select :typeoftask_id, Typeoftask.all, :id, :name
-  .field
-    = f.label :typeofstatus
-    = f.collection_select :typeofstatus_id, Typeofstatus.all, :id, :name
-  .field
-    = f.label :options
-    = f.text_field :options
-  .actions = f.submit
+    .field.col-md-3.form-group
+      = f.label :device
+      = f.collection_select :device_id, Device.order(:name), :id, :name
+    .field.col-md-4.form-group
+      = f.label :typeoftask
+      = f.collection_select :typeoftask_id, Typeoftask.all, :id, :name
+    .field.col-md-3.form-group
+      = f.label :typeofstatus
+      = f.collection_select :typeofstatus_id, Typeofstatus.all, :id, :name
+    .actions.col-md-2.form-group = f.submit class:"btn btn-primary pull-right"
+    .field.col-md-12.form-group
+      = f.label :options
+      = f.text_area :options, class:"col-md-11 pull-right"
+
