--- a/app/views/typeoftasks/index.html.slim
+++ b/app/views/typeoftasks/index.html.slim
@@ -1,25 +1,21 @@
-h1 Listing typeoftasks
+.col-md-6
+  p.btn-group.pull-right = link_to 'New Typeoftask', new_typeoftask_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  h1 Listing typeoftasks
 
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th ID
-      th Name
-      th Priority
-      th
-      th
-      th
-
-  tbody
-    - @typeoftasks.each do |typeoftask|
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = typeoftask.id
-        td = typeoftask.name
-        td = typeoftask.priority
-        td = link_to 'Show', typeoftask
-        td = link_to 'Edit', edit_typeoftask_path(typeoftask)
-        td = link_to 'Destroy', typeoftask, data: {:confirm => 'Are you sure?'}, :method => :delete
+        th ID
+        th Name
+        th Priority
 
-br
-
-= link_to 'New Typeoftask', new_typeoftask_path
+    tbody
+      - @typeoftasks.each do |typeoftask|
+        tr
+          td = typeoftask.id
+          td.col-md-8 = typeoftask.name
+          td = typeoftask.priority
+          td.btn-group role="group"
+            = link_to '', edit_typeoftask_path(typeoftask), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', typeoftask, data: {:confirm => 'Are you sure?'}, :method => :delete
+  = paginate @typeoftasks
