--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -6,6 +6,12 @@
   background-position: center;
 }
 
+.img-status-sz20 {
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+}
+
 .wait {
   background-image: url("wait.png");
 }
