--- a/app/views/contents/index.html.slim
+++ b/app/views/contents/index.html.slim
@@ -1,14 +1,16 @@
-h1 All categories of files
+.col-md-6
+  h1 All categories of files
 
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th Title
-      th [colspan="3"]
-  tbody
-    - @contents.each do |content|
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = content.title
-        td = link_to 'Show', content_path(content)
-        td = link_to 'Edit', edit_content_path(content)
-        td = link_to 'Destroy', content_path(content), method: :delete, data: { confirm: 'Are you sure?' }
+        th Title
+        /th [colspan="1"]
+    tbody
+      - @contents.each do |content|
+        tr
+          td = content.title
+          td.btn-group role="group"
+            = link_to '', content_path(content), class: "glyphicon glyphicon-eye-open btn btn-md btn-default", title: t('std.show')
+            = link_to '', edit_content_path(content), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', content_path(content), method: :delete, data: { confirm: 'Are you sure?' }
