--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -1,31 +1,15 @@
-h1 Listing devices
+p.btn-group.pull-right = link_to t('devices.new'), new_device_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
 
-table class="table table-striped table-hover table-condensed"
+table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
-      th ID
-      th Name
-      th Market
-      th Ping
-      th Version
-      th Updated
-      th Active
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
-      th
+      th = t('devices.thead.id')
+      th = t('devices.thead.name')
+      th = t('devices.thead.market')
+      /th = t('devices.thead.ping')
+      th = t('devices.thead.updated')
+      th = t('devices.thead.version')
+      /th = t('thead.active')
 
   tbody
     - @devices.each do |device|
@@ -33,29 +17,30 @@ table class="table table-striped table-hover table-condensed"
         td = device.id
         td = device.name
         td = device.market.name
-        td = device.ping
-        td = device.version
+        /td = device.ping
         td class=('danger' if (Time.now.utc - device.updated_at > device.ping * 2))
           = (device.updated_at + 3600 * device.tzdate).to_s[0..18]
-        td = check_box 'Active', 'Active', checked: device.active, :disabled => true, :readonly => true
-        td = link_to 'Show', device
-        td = link_to 'Edit', edit_device_path(device)
-        td = link_to 'Destroy', device, data: {:confirm => 'Are you sure?'}, :method => :delete
-        td = link_to 'Setvol', {:controller => "tasks", :action => "create_setvol", :task => { :device_id => device.id, :typeoftask_id => 3, :typeofstatus_id => 1, :options => ''} }, :method => "post"
-        td = link_to 'Synctime', {:controller => "tasks", :action => "create_synctime", :task => { :device_id => device.id, :typeoftask_id => 4, :typeofstatus_id => 1, :options => ''} }, :method => "post"
-        td = link_to 'Ping', {:controller => "tasks", :action => "create_setinterval", :task => {:device_id => device.id, :typeoftask_id => 5, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Equalizer', {:controller => "tasks", :action => "create_setequalizer", :task => {:device_id => device.id, :typeoftask_id => 6, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Reboot', {:controller => "tasks", :action => "create_reboot", :task => {:device_id => device.id, :typeoftask_id => 9, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Getver', {:controller => "tasks", :action => "create_getver", :task => {:device_id => device.id, :typeoftask_id => 7, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        /cmd.two
-        td = link_to 'Getinfo', {:controller => "tasks", :action => "create_getinfo", :task => {:device_id => device.id, :typeoftask_id => 10, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        /cmd.one
-        td = link_to 'SSH', {:controller => "tasks", :action => "create_ssh", :task => {:device_id => device.id, :typeoftask_id => 11, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Volsofday', {:controller => "tasks", :action => "create_setvolsofday", :task => {:device_id => device.id, :typeoftask_id => 12, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Worktime', {:controller => "tasks", :action => "create_worktime", :task => {:device_id => device.id, :typeoftask_id => 13, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Update', {:controller => "tasks", :action => "create_update", :task => {:device_id => device.id, :typeoftask_id => 15, :typeofstatus_id => 1, :options => ''}}, :method => "post"
-        td = link_to 'Del.all', {:controller => "tasks", :action => "create_delall", :task => {:device_id => device.id, :typeoftask_id => 17, :typeofstatus_id => 1, :options => ''}}, :method => "post"
+        td = device.version
+        /td = check_box 'Active', 'Active', checked: device.active, :disabled => true, :readonly => true
+        td.btn-group role="group"
+          = link_to '', device, class: "glyphicon glyphicon-eye-open btn btn-md btn-default", title: t('std.show')
+          = link_to '', edit_device_path(device), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', device, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td.btn-group role="group"
+          = link_to '', {:controller => "tasks", :action => "create_setvol", :task => { :device_id => device.id, :typeoftask_id => 3, :typeofstatus_id => 1, :options => ''} }, :method => "post", class: "glyphicon glyphicon-volume-up btn btn-md btn-default", title: 'Setvol'
+          = link_to '', {:controller => "tasks", :action => "create_synctime", :task => { :device_id => device.id, :typeoftask_id => 4, :typeofstatus_id => 1, :options => ''} }, :method => "post", class: "glyphicon glyphicon-hourglass btn btn-md btn-default", title: 'Synctime'
+          = link_to '', {:controller => "tasks", :action => "create_setinterval", :task => {:device_id => device.id, :typeoftask_id => 5, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-send btn btn-md btn-default", title: 'Ping'
+          = link_to '', {:controller => "tasks", :action => "create_setequalizer", :task => {:device_id => device.id, :typeoftask_id => 6, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-equalizer btn btn-md btn-default", title: 'Equalizer'
+          = link_to '', {:controller => "tasks", :action => "create_reboot", :task => {:device_id => device.id, :typeoftask_id => 9, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-repeat btn btn-md btn-default", title: 'Reboot'
+          = link_to '', {:controller => "tasks", :action => "create_getver", :task => {:device_id => device.id, :typeoftask_id => 7, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-tag btn btn-md btn-default", title: 'Getver'
+          /cmd.two
+          = link_to '', {:controller => "tasks", :action => "create_getinfo", :task => {:device_id => device.id, :typeoftask_id => 10, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-tags btn btn-md btn-default", title: 'Getinfo'
+          /cmd.one
+          = link_to '', {:controller => "tasks", :action => "create_ssh", :task => {:device_id => device.id, :typeoftask_id => 11, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-console btn btn-md btn-default", title: 'SSH'
+          = link_to '', {:controller => "tasks", :action => "create_setvolsofday", :task => {:device_id => device.id, :typeoftask_id => 12, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-headphones btn btn-md btn-default", title: 'VolsOfDay'
+          = link_to '', {:controller => "tasks", :action => "create_worktime", :task => {:device_id => device.id, :typeoftask_id => 13, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-calendar btn btn-md btn-default", title: 'Worktime'
+          = link_to '', {:controller => "tasks", :action => "create_update", :task => {:device_id => device.id, :typeoftask_id => 15, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-wrench btn btn-md btn-default", title: 'Update'
+          = link_to '', {:controller => "tasks", :action => "create_delall", :task => {:device_id => device.id, :typeoftask_id => 17, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-floppy-remove btn btn-md btn-default", title: 'Del.all'
 
-br
-= paginate @devices
-= link_to 'New Device', new_device_path
+  = paginate @devices
+
