--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,16 @@
 
 <div id="wrap">
   <div class="container-fluid">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
+    <%- if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <%- if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </div>
 </div>
+<%= render 'layouts/footer' %>
+
 </body>
 </html>
