--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -1,16 +1,13 @@
-h1 Listing orders
+p.btn-group.pull-right = link_to 'New Order', new_order_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary"
 
-= link_to 'New Order', new_order_path
-br
-
-table class="table table-striped table-hover table-condensed"
+table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
-      th ID
-      th Name
-      th Status
-      th Crated_at
-      th User
+      th = t('orders.thead.id')
+      th = t('orders.thead.name')
+      th = t('orders.thead.status')
+      th = t('orders.thead.created')
+      th = t('orders.thead.user')
       th
       /Edit th
       th
@@ -22,17 +19,18 @@ table class="table table-striped table-hover table-condensed"
     - @orders.each do |order|
       tr
         td = order.id
-        td = order.name
+        td.col-md-6 = order.name
         td class="img-status #{order.status.name.downcase}"
-        td = order.created_at.to_s[0..18]
+        td.col-md-2 = order.created_at.to_s[0..18]
         /Fixme after adde in order user_id
-        td = current_user.email
-        td = link_to 'Show', order
+        td.col-md-1 = current_user.email
+        td = link_to '', order, class: "glyphicon glyphicon-eye-open btn btn-sm", title: t('std.show')
         /td = link_to 'Edit', edit_order_path(order)
-        td = link_to 'Destroy', order, data: {:confirm => 'Are you sure?'}, :method => :delete
+        /td.col-md-1 = link_to '', order, data: {:confirm => 'Are you sure?'}, :method => :delete, class: "glyphicon glyphicon-remove-sign btn btn-sm btn-danger", title: ''
         - if order.status.name == 'New'
-          td = link_to "Start", {:controller => "orders", :action => "start", :id => order.id}, :method => "post"
-        td = link_to "Clone", {:controller => "orders", :action => "new", :old_id => order.id}, :method => "get"
+          td.col-md-1 = link_to '', {:controller => "orders", :action => "start", :id => order.id}, :method => "post", class: "glyphicon glyphicon-play btn btn-sm btn-primary", title: 'Start'
+        td = link_to '', {:controller => "orders", :action => "new", :old_id => order.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: 'Clone'
         - unless order.status.name == 'Cancel'
-          td = link_to "Cancel", {controller: "orders", action: "cancel", id: order}, :method => "post"
+          td.col-md-1 = link_to '', {controller: "orders", action: "cancel", id: order}, :method => "post", class: "glyphicon glyphicon-remove btn btn-sm btn-danger", title: 'Cancel'
+
 = paginate @orders
