--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -1,70 +1,72 @@
-p#notice = notice
+/p#notice = notice
 
-- if @order.status.name == 'New'
-  td = link_to "Start", {:controller => "orders", :action => "start", :id => @order.id}, :method => "post"
+.col-md-12
+  - if @order.status.name == 'New'
+    p.btn-group.col-md-1.pull-right = link_to "Start", {:controller => "orders", :action => "start", :id => @order.id}, :method => "post", class: "glyphicon glyphicon-play btn btn-md btn-primary"
 
-p
-  strong Name:
-  = @order.name
+  p.col-md-2
+    strong Name:
+    = @order.name
 
-p
-  strong Status:
-  = @order.status.name
-p
-  strong Sun:
-  = check_box 'Sun', 'Sun', checked: @order.sun, :disabled => true, :readonly => true
-  strong Mon:
-  = check_box 'Mon', 'Mon', checked: @order.mon, :disabled => true, :readonly => true
-  strong Tue:
-  = check_box 'Tue', 'Tue', checked: @order.tue, :disabled => true, :readonly => true
-  strong Wed:
-  = check_box 'Wed', 'Wed', checked: @order.wed, :disabled => true, :readonly => true
-  strong Thu:
-  = check_box 'Thu', 'Thu', checked: @order.thu, :disabled => true, :readonly => true
-  strong Fri:
-  = check_box 'Fri', 'Fri', checked: @order.fri, :disabled => true, :readonly => true
-  strong Sat:
-  = check_box 'Sat', 'Sat', checked: @order.sat, :disabled => true, :readonly => true
+  p.col-md-2
+    strong Status:
+    span.img-status.img-status-sz20.center-block.padt20.margin-bottom-m5 class="#{@order.status.name.downcase}"
+    = @order.status.name
+  p.col-md-7
+    strong Sun:
+    = check_box 'Sun', 'Sun', checked: @order.sun, :disabled => true, :readonly => true
+    strong Mon:
+    = check_box 'Mon', 'Mon', checked: @order.mon, :disabled => true, :readonly => true
+    strong Tue:
+    = check_box 'Tue', 'Tue', checked: @order.tue, :disabled => true, :readonly => true
+    strong Wed:
+    = check_box 'Wed', 'Wed', checked: @order.wed, :disabled => true, :readonly => true
+    strong Thu:
+    = check_box 'Thu', 'Thu', checked: @order.thu, :disabled => true, :readonly => true
+    strong Fri:
+    = check_box 'Fri', 'Fri', checked: @order.fri, :disabled => true, :readonly => true
+    strong Sat:
+    = check_box 'Sat', 'Sat', checked: @order.sat, :disabled => true, :readonly => true
 
-  - if @order.suborders.size > 0
-    table id="suborders_list" class="table table-striped table-hover table-condensed"
-      thead
+- if @order.suborders.size > 0
+  table.table.table-striped.table-hover.table-condensed.table-bordered id="suborders_list"
+    thead
+      tr
+        th ID device
+        th Device
+        th Period
+        th Start date
+        th Stop date
+        th Start time
+        th Stop time
+        th Files
+    tbody id="suborders_body"
+      - @order.suborders.each do |order|
         tr
-          th ID device
-          th Device
-          th Period
-          th Start date
-          th Stop date
-          th Start time
-          th Stop time
-          th Files
-      tbody id="suborders_body"
-        - @order.suborders.each do |order|
-          tr
-            td = order.device.id
-            td = order.device.name
-            td = order.period.name
-            td = order.startdt.to_s[0..18]
-            td = order.stopdt.to_s[0..18]
-            td = order.startt.to_s[11..18]
-            td = order.stopt.to_s[11..18]
-            - names = ""
-            - order.plists.each do |plist|
-              - if plist.mediafile.present?
-                - names += "#{plist.mediafile.filename}\n"
-            td title = "#{names}"
-              = order.plists.size
-          - if order.tasks.present?
-              - order.tasks.each do |task|
-                tr
-                  td
-                  td
-                  td
-                  td
-                  td
-                  td = link_to task.id.to_s, task
-                  td = task.typeoftask.name
-                  td class="img-status #{task.typeofstatus.name.downcase}"
+          td = order.device.id
+          td = order.device.name
+          td = order.period.name
+          td = order.startdt.to_s[0..18]
+          td = order.stopdt.to_s[0..18]
+          td = order.startt.to_s[11..18]
+          td = order.stopt.to_s[11..18]
+          - names = ""
+          - order.plists.each do |plist|
+            - if plist.mediafile.present?
+              - names += "#{plist.mediafile.filename}\n"
+          td title = "#{names}"
+            = order.plists.size
+        - if order.tasks.present?
+          - order.tasks.each do |task|
+            tr
+              td
+              td
+              td
+              td
+              td
+              td = link_to task.id.to_s, task
+              td = task.typeoftask.name
+              td class="img-status #{task.typeofstatus.name.downcase}"
 
 /= link_to 'Edit', edit_order_path(@order)
 /'|
