--- a/app/views/periods/index.html.slim
+++ b/app/views/periods/index.html.slim
@@ -1,23 +1,25 @@
-h1 Listing periods
+.col-md-6
 
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th Value
-      th Name
-      th
-      th
-      th
+  p.btn-group.pull-right = link_to 'New Period', new_period_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
 
-  tbody
-    - @periods.each do |period|
+  h1 Listing periods
+
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = period.value
-        td = period.name
-        td = link_to 'Show', period
-        td = link_to 'Edit', edit_period_path(period)
-        td = link_to 'Destroy', period, data: {:confirm => 'Are you sure?'}, :method => :delete
+        th Value
+        th Name
 
-br
 
-= link_to 'New Period', new_period_path
+    tbody
+      - @periods.each do |period|
+        tr
+          td = period.value
+          td.col-md-10 = period.name
+          td.btn-group role="group"
+            = link_to '', edit_period_path(period), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', period, data: {:confirm => 'Are you sure?'}, :method => :delete
+
+  = paginate @periods
+
+
