--- a/app/views/plsbgimages/index.html.slim
+++ b/app/views/plsbgimages/index.html.slim
@@ -1,21 +1,22 @@
-h1 Listing plsbgimages
+.col-md-6
 
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th Name
-      th
-      th
-      th
-
-  tbody
-    - @plsbgimages.each do |plsbgimage|
+  h1.col-md-8.pull-left Listing plsbgimages
+  = link_to 'New Plsbgimage', new_plsbgimage_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = plsbgimage.name
-        td = link_to 'Show', plsbgimage
-        td = link_to 'Edit', edit_plsbgimage_path(plsbgimage)
-        td = link_to 'Destroy', plsbgimage, data: {:confirm => 'Are you sure?'}, :method => :delete
+        th #
+        th Name
+        th Created
 
-br
-
-= link_to 'New Plsbgimage', new_plsbgimage_path
+    tbody
+      - @plsbgimages.each do |plsbgimage|
+        tr
+          td = plsbgimage.id
+          td.col-md-5 = plsbgimage.name
+          td = (plsbgimage.created_at + 3600 * 7).to_s[0..18]
+          td.btn-group role="group"
+            = link_to '', plsbgimage, class: "glyphicon glyphicon-eye-open btn btn-md btn-default", title: t('std.show')
+          /td = link_to 'Edit', edit_plsbgimage_path(plsbgimage)
+          /td = link_to 'Destroy', plsbgimage, data: {:confirm => 'Are you sure?'}, :method => :delete
+= paginate @plsbgimages
