--- a/app/views/statuses/index.html.slim
+++ b/app/views/statuses/index.html.slim
@@ -1,21 +1,20 @@
-h1 Listing statuses
-
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th Name
-      th
-      th
-      th
-
-  tbody
-    - @statuses.each do |status|
+.col-md-6
+  p.btn-group.pull-right = link_to 'New Status', new_status_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  h1 Listing statuses
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = status.name
-        td = link_to 'Show', status
-        td = link_to 'Edit', edit_status_path(status)
-        td = link_to 'Destroy', status, data: {:confirm => 'Are you sure?'}, :method => :delete
+        th #
+        th Name
 
-br
+    tbody
+      - @statuses.each do |status|
+        tr
+          td = status.id
+          td.col-md-10 = status.name
+          td.btn-group role="group"
+            = link_to '', edit_status_path(status), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', status, data: {:confirm => 'Are you sure?'}, :method => :delete
+  = paginate @statuses
 
-= link_to 'New Status', new_status_path
+
