--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,16 +1,15 @@
-h1 Listing tasks
 = paginate @tasks
-table class="table table-striped table-hover table-condensed"
+
+/= link_to t('tasks.new'), new_task_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+
+table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
-      th ID
-      th Device
-      th Type
-      th Status
+      th = t('tasks.thead.id')
+      th = t('tasks.thead.device')
+      th = t('tasks.thead.type')
+      th = t('tasks.thead.status')
       /th Options
-      th
-      th
-      th
       th
       th
 
@@ -18,16 +17,15 @@ table class="table table-striped table-hover table-condensed"
     - @tasks.each do |task|
       tr
         td = task.id
-        td = task.device.name
+        td.col-md-5 = task.device.name
         td = task.typeoftask.name
         td class="img-status #{task.typeofstatus.name.downcase}"
         /td = task.options[0..30]+'...'
         td = (task.updated_at + 3600 * task.device.tzdate).to_s[0..18]
         td = (task.created_at + 3600 * task.device.tzdate).to_s[0..18]
-        td = link_to 'Show', task
-        td = link_to 'Edit', edit_task_path(task)
-        td = link_to 'Destroy', task, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td.btn-group role="group"
+          = link_to '', task, class: "glyphicon glyphicon-eye-open btn btn-md btn-default", title: t('std.show')
+          = link_to '', edit_task_path(task), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+        /td = link_to t('std.destroy'), task, data: {:confirm => 'Are you sure?'}, :method => :delete
 = paginate @tasks
-br
 
-= link_to 'New Task', new_task_path
