--- a/app/views/typeofstatuses/index.html.slim
+++ b/app/views/typeofstatuses/index.html.slim
@@ -1,23 +1,21 @@
-h1 Listing typeofstatuses
+.col-md-6
+  p.btn-group.pull-right = link_to 'New Typeofstatus', new_typeofstatus_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  h1 Listing typeofstatuses
 
-table class="table table-striped table-hover table-condensed"
-  thead
-    tr
-      th Name
-      th Priority
-      th
-      th
-      th
-
-  tbody
-    - @typeofstatuses.each do |typeofstatus|
+  table.table.table-striped.table-hover.table-condensed.table-bordered
+    thead
       tr
-        td = typeofstatus.name
-        td = typeofstatus.priority
-        td = link_to 'Show', typeofstatus
-        td = link_to 'Edit', edit_typeofstatus_path(typeofstatus)
-        td = link_to 'Destroy', typeofstatus, data: {:confirm => 'Are you sure?'}, :method => :delete
+        th #
+        th Name
+        th Priority
 
-br
-
-= link_to 'New Typeofstatus', new_typeofstatus_path
+    tbody
+      - @typeofstatuses.each do |typeofstatus|
+        tr
+          td = typeofstatus.id
+          td.col-md-10  = typeofstatus.name
+          td = typeofstatus.priority
+          td.btn-group role="group"
+            = link_to '', edit_typeofstatus_path(typeofstatus), class: "glyphicon glyphicon-edit btn btn-md btn-default", title: t('std.edit')
+          /td = link_to 'Destroy', typeofstatus, data: {:confirm => 'Are you sure?'}, :method => :delete
+  = paginate @typeofstatuses
