--- a/app/views/volsofdays/_form.html.slim
+++ b/app/views/volsofdays/_form.html.slim
@@ -1,39 +1,8 @@
-#timestring
-  #hours class="col-md-4"
-    #am-hours class="col-md-6"
-      table.table-bordered
-        tbody
-          - h = 0
-          - (1..3).each do |tr|
-            tr
-              - (1..4).each do |td|
-                td = link_to h.to_s, "#", remote: true, class: 'set-hours'
-                - h+=1
-    #pm-hours class="col-md-6"
-      table.table-bordered
-        tbody
-          - h = 12
-          - (1..3).each do |tr|
-            tr
-              - (1..4).each do |td|
-                td = link_to h.to_s, "#", remote: true, class: 'set-hours'
-                - h+=1
-
-  #volsofdays-form class="col-md-4"
-    = form_for [@market, @market.volsofdays.build], html: {class: "form-control"} do |f|
-      .field class="form-group"
-        = f.label :time
-        = f.text_field :time, value: '00:00', :readonly => true
-      .field class="form-group"
-        = f.label :value
-        = f.number_field :value, value: 60
-      .actions = f.submit nil, class: "btn btn-primary"
-    #minutes class="col-md-4"
-    table.table-bordered
-      tbody
-        - m = 0
-        - (1..3).each do |tr|
-          tr
-            - (1..4).each do |td|
-              td = link_to m.to_s, "#", remote: true, class: 'set-minutes'
-              - m+=5
+= form_for [@market, @market.volsofdays.build] do |f|
+  .div class="input-group bootstrap-timepicker timepicker col-md-5"
+    = f.text_field :time, value: '10:00', class: "form-control input-small"
+    span class="input-group-addon"
+      i class="glyphicon glyphicon-time"
+  .div class="input-group bootstrap-timepicker timepicker col-md-6"
+    = f.number_field :value, value: 60
+  .actions = f.submit nil, class: "btn btn-primary"
