generate volumes after create device

--- a/app/views/contents/index.html.slim
+++ b/app/views/contents/index.html.slim
@@ -1,4 +1,9 @@
 .col-md-6
+
+  p.btn-group.pull-right
+    - if Content.all.count == 0
+      = link_to 'Generate', {:controller => "contents", :action => "gen"}, :method => "post", class: "glyphicon glyphicon-forward btn btn-md btn-success pull-left"
+
   h1 All categories of files
 
   table.table.table-striped.table-hover.table-condensed.table-bordered
