--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -32,9 +32,7 @@
   h2 Create new volume of volume
   == render 'volumes/form'
 
-
-
-.col-md-6
+p.col-md-6
   p
     strong Ping:
     = @device.ping
