--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -1,13 +1,9 @@
-p#notice = notice
+/p#notice = notice
 
-= link_to 'Edit', edit_market_path(@market)
-'|
-= link_to 'Back', markets_path
-
-p
+p.col-md-2
   strong Name:
   = @market.name
-p
+p.com-md-1
   strong Period:
   = @market.period
 
@@ -19,16 +15,16 @@ p
           - volsofday.errors.full_messages.each do |message|
             li = message
 
-#market-show class="col-md-12"
-  #volsofdays class="col-md-6"
-    #volsofdays-new class="col-md-8"
-      h2 Create new time/value of volsofday
+#market-show.col-md-12
+  #volsofdays.col-md-5
+    /#volsofdays-new.col-md-4
+      h2 New time/value
       = render 'volsofdays/form'
 
-    #volsofdays-list class="col-md-2"
+    #volsofdays-list.col-md-8
       h2 Volsofdays
       - if @market.volsofdays.count > 0
-        ttable.table.table-striped.table-hover.table-condensed.table-bordered
+        table.table.table-striped.table-hover.table-condensed.table-bordered
           thead
             tr
               th Time
@@ -37,23 +33,26 @@ p
           tbody
             = render @market.volsofdays.order(:time)
 
-  #worktime class="col-md-6"
-    #worktime-new class="col-md-6"
-      h2 Create work's time/wday of
-      = render 'worktime_broadcastings/form'
-
-    #worktime-broadcastings class="col-md-6"
-      h2 Worktime_broadcastings
+  #worktime.col-md-7
+    #worktime-broadcastings
+      h2 Worktime broadcastings
       - if @market.worktime_broadcastings.count > 0
-        #worktime-show class="col-md-6"
-          table class="table table-striped table-hover table-condensed"
+        #worktime-show.col-md-6
+          table.table.table-striped.table-hover.table-condensed.table-bordered
             thead
               tr
                 th Day
                 th Start
                 th Stop
-                th [colspan="1"]
+                /th [colspan="1"]
             tbody
               = render @market.worktime_broadcastings.order(:wday)
 
+    /#worktime-new.col-md-6
+      h2 Create work's time/wday of
+      = render 'worktime_broadcastings/form'
 
+.col-md-12
+  = link_to 'Edit', edit_market_path(@market)
+  '|
+  = link_to 'Back', markets_path
